argocd/services/common/base/cnpg-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cnpg-cluster-rw
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "0"
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`postgres.127.0.0.1.nip.io`)
      services:
        - name: cnpg-cluster-rw
          port: 5432
  tls:
    passthrough: true
